fix: Navbar toggle in the wrong position

--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -61,12 +61,6 @@ nav {
 			top: 2rem;
 			right: 1rem;
 		}
-
-
-		@include media( ">tablet", "<=desktop" ) {
-			top: 2rem;
-			right: 6.3rem;
-		}
 	}
 
 	.media-toggle .bar {
